--- a/flask_app/Static/styles.css
+++ b/flask_app/Static/styles.css
@@ -23,13 +23,14 @@
 body {
     background-color: var(--lightpurple);
     height: 100%;
+    margin: 0;  /* Reset default margin */
 }
 
 main {
-    /* max-width: 90%; */
-    width: 50dvw;
+    width: 50vw;
     margin: auto;
 }
+
 
 h1 {
     text-align: center;
@@ -477,6 +478,17 @@ button {
     margin-right: auto;
 }
 
+/* profile pic on nav bar*/
+.forPic{
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 50px; 
+    max-height: 50px
+}
 /* chatroom css */
 
 #messages {
@@ -631,3 +643,34 @@ button {
     color: #ffffff;
   }
 */
+
+.search-form {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px; /* Add some margin for spacing */
+    border-radius: 35px;
+    width: 400px; 
+}
+.search-input {
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    font-size: 14px; /* Adjust font size as needed */
+    border-radius: 35px;
+    width: 400px; 
+}
+.search-button {
+    padding: 5px 10px;
+    margin-left: 5px;
+    background-color: #AE76A6;
+    color: white;
+    border: none;
+    border-radius: 35px;
+    cursor: pointer;
+    font-size: 14px; /* Adjust font size as needed */
+}
+/* Hover effect for the button */
+.search-button:hover {
+    background-color: #ccc;
+    border-radius: 35px;
+}
