--- a/flask_app/templates/layout.html
+++ b/flask_app/templates/layout.html
@@ -15,7 +15,7 @@
                 <a href="{{url_for('habitats')}}">Habitats</a>
                 <a href="{{url_for('logout')}}">Logout</a>
                 <a href="{{url_for('profile')}}">
-                    <img id="profilePicture" alt="profile picture" src="{{ url_for('static', filename='images/profile_uploads/' + (user.profile_picture or 'profile_default.jpeg')) }}">
+                    <img id="profilePicture2" class="forPic" alt="profile picture" src="{{ url_for('static', filename='images/profile_uploads/' + (user.profile_picture or 'profile_default.jpeg')) }}" >
                 </a>
             {% else %}
                 <a href="{{url_for('home')}}">Home</a>
