--- a/flask_app/Static/styles.css
+++ b/flask_app/Static/styles.css
@@ -428,6 +428,23 @@ button {
     margin: 0px 10px 0px 10px;
     color: black;
 }
+#habits-list {
+    list-style-type: none;
+    padding: 0; 
+    margin: 0; 
+}
+
+.habitItem {
+    list-style: none;
+}
+.habitItem:hover {
+    outline: 2px solid #AE76A6; 
+    cursor: grab;
+}
+
+.habitItem:hover button {
+    outline: none; 
+}
 
 .sidebar > .habitat_item {
     border-top: solid 3px;
