--- a/flask_app/Static/styles.css
+++ b/flask_app/Static/styles.css
@@ -74,8 +74,9 @@ header > ul {
     list-style: none;
 }
 
-#profilePicture {
-    max-width: 30px;
+.profilePicture {
+    width: 30px;
+    height: 30px;
     object-fit: cover;
     border-radius: 100%;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
