Habitat Chat Button(In Progress)
Don't pull

--- a/flask_app/templates/habitats.html
+++ b/flask_app/templates/habitats.html
@@ -55,6 +55,7 @@
                 <div class="habitat_details">
                     <h3>{{ habitat.title }}</h3>
                     <p>{{ habitat.users_habit }}</p>
+                    <button href="/chatroom/habitat.id"> Go to Habitat Chatroom</button>
                     <!-- <p>{{ habitat.user.habitats|length }} Inhabitants</p> -->
                 </div>
             </a>
