--- a/flask_app/templates/habitats.html
+++ b/flask_app/templates/habitats.html
@@ -38,7 +38,9 @@
     <main class="container_with_sidebar">
         <div class="sidebar">
             <button class="open-button" onclick="openForm()">Create Habitat</button>
-            <form method="GET" action="/search_habits" class="search-form">
+
+            <!-- Below is in-progress search bar? -->
+            <!-- <form method="GET" action="/search_habits" class="search-form">
                 <input type="text" name="query" placeholder="Search habitatas..." class="search-input">
                 
                 <select name="habits" class="search-dropdown">
@@ -47,36 +49,21 @@
                     {% endfor %}
                 </select>
                 <button type="submit" class="search-button">Search</button>
-                </form>
-            {% for habitat in habitats %}
+                </form> -->
 
-            <a class="habitat_item" href="" onclick="selectHabitat(this, '{{habitat.id}}')">
-                <img class="habitat_icon" src="{{ url_for('static', filename='images/user_uploads/' + habitat.icon_image) }}">
+            {% for h in habitats %}
+
+            <a class="habitat_item {% if h.id == habitat.id %} selected_habitat {% endif %}" href="{{ url_for('open_habitat', habitat_id=h.id) }}">
+                <img class="habitat_icon" src="{{ url_for('static', filename='images/user_uploads/' + h.icon_image) }}">
                 <div class="habitat_details">
-                    <h3>{{ habitat.title }}</h3>
-                    <p>{{ habitat.users_habit }}</p>
-                    <button href="/chatroom/habitat.id"> Go to Habitat Chatroom</button>
-                    <!-- <p>{{ habitat.user.habitats|length }} Inhabitants</p> -->
+                    <h3>{{ h.title }}</h3>
+                    <p>{{ h.users_habit }}</p>
                 </div>
             </a>
             
     
             {% endfor %}
 
-            <!-- <div class="habitat_item selected_habitat">
-                <img class="habitat_icon" src="static/images/checkmark.png">
-                <div class="habitat_details">
-                    <h3>Classical Guitar</h3>
-                    <p>Practice guitar for 30 minutes</p>
-                </div>
-            </div>
-            <div class="habitat_item">
-                <img class="habitat_icon" src="static/images/checkmark.png">
-                <div class="habitat_details">
-                    <h3>Book Club</h3>
-                    <p>Read one chapter</p>
-                </div>
-            </div> -->
         </div>
 
         <div class="habitat_view centered">
@@ -85,7 +72,7 @@
                 <!-- Display details for the selected habitat -->
                 <h2>{{ habitat.title }}</h2>
                 <img class="habitat-image" src="{{ url_for('static', filename='images/user_uploads/' + habitat.icon_image) }}" alt="{{ habitat.title }}">
-                <!-- Add other details as needed -->
+                <a href="{{ url_for('chatroom', habitat_id=habitat.id) }}"> Go to Habitat Chatroom</a>
             {% else %}
                 <p>Not working yet?</p>
                 <!-- Your existing code for displaying habits -->
@@ -106,21 +93,6 @@
         </div>
     </main>
     <script>
-        function selectHabitat(element, habitatId) {
-            
-            // Prevent the default behavior of the anchor tag
-            event.preventDefault();     
-            console.log(habitatId)
-            // Remove the 'selected_habitat' class from all elements with the same class
-            var habitatItems = document.querySelectorAll('.habitat_item');
-            habitatItems.forEach(function(item) {
-                item.classList.remove('selected_habitat');
-            });
-
-            // Add the 'selected_habitat' class to the clicked element
-            element.classList.add('selected_habitat');
-            showHabitatDetails(habitatId);
-        }
 
         function openForm() {
             document.getElementById("myForm").style.display = "block";
@@ -128,37 +100,6 @@
 
         function closeForm() {
             document.getElementById("myForm").style.display = "none";
-        }
-        function showHabitatDetails(habitatId) {
-            // fetch(`/get_habitat_details/${habitatId}`)
-            fetch(`/habitats/${habitatId}`)
-                .then(response => response.json())
-                .then(data => {
-                    updateHabitatView(data);
-                })
-                .catch(error => console.error('Error fetching habitat details:', error));
-        }
-
-        function updateHabitatView(habitatDetails) {
-            var habitatView = document.querySelector('.habitat_view');
-            var membersHtml = '';
-
-            habitatDetails.members.forEach(member => {
-                membersHtml += `
-                    <p>${member.first_name} ${member.last_name} - ${member.streak} <img src="static/images/flame_colored.png" alt="Flame" class="flame-icon"></p>
-                `;
-            });
-
-            habitatView.innerHTML = `
-                <div class="habitat-details">
-                    <h2>${habitatDetails.title}</h2>
-                    <img class="habitat-image" src="${habitatDetails.icon_image}" alt="${habitatDetails.title}">
-                    <h3>Members</h3>
-                    <div class="members-list">
-                        ${membersHtml}
-                    </div>
-                </div>
-            `;
         }
 
     </script>
