--- a/flask_app/Static/styles.css
+++ b/flask_app/Static/styles.css
@@ -128,7 +128,7 @@ header > ul {
     color: #C7C6C6;
 }
 
-.habitItem img {
+.habitItem img, .memberItem img {
     max-width: 30px;
     max-height: 30px;
     align-items: center;
@@ -418,6 +418,7 @@ button {
     right: 0;
     min-width: 75%;
     background-color: var(--offwhite);
+    padding: 20px;
     
 }
 
@@ -480,6 +481,26 @@ button {
     border-radius: 100%;
     border: solid 2px black;
 
+    align-items: center;
+}
+
+.memberItem {
+    /* Content arrangement */
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+    min-width: 100%;
+
+    /* Background styling */
+    padding: 10px;
+    background-color: white;
+    border-radius: 15px;
+}
+
+.memberItem * {
+    display: flex;
+    margin: 5px;
+    text-decoration: none;
     align-items: center;
 }
 
