--- a/flask_app/templates/profile.html
+++ b/flask_app/templates/profile.html
@@ -48,6 +48,10 @@
                 {% endfor %}
             </ul> -->
 
+            <div class="about-button">
+                <a href="{{url_for('aboutUs')}}">About Us</a>
+            </div>
+
             <div class="joinnow">
                 <a href="{{ url_for('home') }}">Log Out</a>
             </div>
