--- a/flask_app/Static/styles.css
+++ b/flask_app/Static/styles.css
@@ -185,6 +185,22 @@ header > ul {
     font-size: 18px;
 }
 
+.about-button {
+    display: inline-block;
+    background-color: #F4F4F6;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+    margin: 40px; 
+}
+
+.about-button a {
+    text-decoration: none; /* Remove underline */
+    color: #AE76A6; /* Set text color to black */
+    font-size: 18px;
+}
+
 .container * {
     padding: 5px;
     
